:sparkles: [#71] Make Verzoek.isGerelateerdAan an array of objects
